--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
-*, html, body {
-    margin: 0px;
-    padding: 0px;
-    font-family: 'Poppins', sans-serif;
+*,
+html,
+body {
+  margin: 0px;
+  padding: 0px;
+  font-family: "Poppins", sans-serif;
 }
 
 .parent-container {
@@ -11,116 +13,220 @@
 }
 
 .container {
-    width: 35%;
-    height: 95vh;
-    background-color: #111111;
-    display: flex;
-    flex-direction: column;
-    border-radius: 20px;
-    overflow: scroll;
-  }
+  max-width: 475px;
+  height: 95vh;
+  background-color: #111111;
+  display: flex;
+  flex-direction: column;
+  border-radius: 20px;
+}
 
 .wrap-header {
-    height: 55px;
-    overflow: visible;
-    background-color: #1b1b1b;
-    display: flex;
-    padding: 15px;
-    border-radius: 20px;
-  }
+  height: 55px;
+  overflow: visible;
+  background-color: #1b1b1b;
+  display: flex;
+  padding: 15px;
+  border-radius: 20px;
+}
 
-  .header {
-    margin: 0 auto;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+.header {
+  margin: 0 auto;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  .header {
-    font-size: 1.5em;
-    font-weight: 500;
-    padding: 5px 15px;
-    background-color: blue;
-    border-radius: 5px;
-  }
+.header {
+  font-size: 1.5em;
+  font-weight: 500;
+  padding: 5px 15px;
+  background-color: blue;
+  border-radius: 5px;
+}
 
-  
-  .wrap-input-todo {
-    display: flex;
-    flex-direction: column; 
-    justify-content: center;
-  }
+.wrap-input-todo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 
+.input-todo {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  margin: 0px;
+  padding: 0px;
+  justify-content: center;
+  padding: 0px 100px 0px 100px;
+}
+
+.p-input-todo {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+  font-size: 20px;
+}
+
+.input-input-todo {
+  height: 35px;
+  padding: 5px 10px;
+  font-size: 15px;
+  border-radius: 5px;
+}
+
+.submit-button {
+  font-size: 20px;
+  margin: 20px 190px 0px 190px;
+}
+
+/* CSS */
+.submit-button {
+  align-items: center;
+  appearance: none;
+  background-color: #FCFCFD;
+  border-radius: 4px;
+  border-width: 0;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #36395A;
+  cursor: pointer;
+  display: inline-flex;
+  height: 48px;
+  justify-content: center;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  padding-left: 16px;
+  padding-right: 16px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow .15s,transform .15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow,transform;
+  font-size: 18px;
+}
+
+.submit-button:focus {
+  box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+}
+
+.submit-button:hover {
+  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  transform: translateY(-2px);
+}
+
+.submit-button:active {
+  box-shadow: #D6D6E7 0 3px 7px inset;
+  transform: translateY(2px);
+}
+
+
+.todo-list {
+  color: white;
+  font-size: 20px;
+  padding: 30px 60px;
+}
+
+.list-group {
+  /* padding: 5px 10px 5px 10px; */
+  overflow: auto;
+  scrollbar-width: thin;
+  scrollbar-color: #1b1b1b #111111;
+  max-height: 35vh;
+}
+
+.todo-item {
+  padding: 12px 12px;
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
+  background-color: #1b1b1b;
+  border-style: solid;
+  border-radius: 5px;
+  border-width: 3px;
+  margin-bottom: 18px;
+}
+
+.delete-todo-item {
+  text-decoration: none;
+  color: white;
+  background-color: rgb(235, 25, 25);
+  font-size: 18px;
+  padding: 2px 8px 0px 8px;
+  border-radius: 3px;
+  text-align: center;
+  display: inline-block;
+}
+
+.clear-all-todo-list {
+  display: flex;
+  justify-content: center;
+}
+
+.clear-clear-all-todo-list {
+  font-size: 18px;
+  padding: 0px 5px;
+  margin-bottom: 10px;
+}
+
+/* CSS */
+.clear-clear-all-todo-list {
+  align-items: center;
+  appearance: none;
+  background-color: #FCFCFD;
+  border-radius: 4px;
+  border-width: 0;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #36395A;
+  cursor: pointer;
+  display: inline-flex;
+  height: 48px;
+  justify-content: center;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  padding-left: 16px;
+  padding-right: 16px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow .15s,transform .15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow,transform;
+  font-size: 18px;
+}
+
+.clear-clear-all-todo-list:focus {
+  box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+}
+
+.clear-clear-all-todo-list:hover {
+  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  transform: translateY(-2px);
+}
+
+.clear-clear-all-todo-list:active {
+  box-shadow: #D6D6E7 0 3px 7px inset;
+  transform: translateY(2px);
+}
+
+@media screen and (max-width: 376px) {
   .input-todo {
-    color: white;
-    display: flex;
-    flex-direction: column;
-    margin: 0px;
-    padding: 0px;
-    justify-content: center;
-    padding: 30px 100px 0px 100px;
-  }
-
-  .p-input-todo {
-    display: flex;
-    justify-content: center;
-    padding: 10px;
-    font-size: 20px;
-  }
-
-  .input-input-todo {
-    height: 35px;
-    padding: 5px 10px;
-    font-size: 15px;
-    border-radius: 5px;
+    padding: 0px 50px;
   }
 
   .submit-button {
-    font-size: 20px;
-    margin: 20px 190px 0px 190px;
+    margin: 0px 125px;
+    margin-top: 20px;
   }
-
-
-  .todo-list {
-    color: white;
-    font-size: 20px;
-    padding: 30px 60px;
-  }
-  
-  .list-group {
-    /* padding: 5px 10px 5px 10px; */
-  }
-
-  .todo-item {
-    padding: 12px 12px 12px 12px;
-    display: flex;
-    justify-content: space-between;
-    list-style-type: none;
-    background-color: #1b1b1b;
-    border-style: solid;
-    border-radius: 5px;
-    border-width: 3px;
-    margin-bottom: 18px;
-  }
-
-  .delete-todo-item {
-    text-decoration: none;
-    color: white;
-    background-color: rgb(235, 25, 25);
-    font-size: 18px;
-    padding: 2px 8px 0px 8px;
-    border-radius: 3px;
-    text-align: center;
-    display: inline-block;
-  }
-
-  .clear-all-todo-list {
-    display: flex;
-    justify-content: center;
-  }
-
-  .clear-clear-all-todo-list {
-    font-size: 18px;
-    padding: 0px 5px;
-  }
+}
